// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body PicassoTableCell-body"
        >
          Cell
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;

exports[`TableCell renders compact 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body PicassoTableCell-body PicassoTableCell-compact"
        >
          Cell
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;

exports[`TableCell renders narrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root PicassoTableRow-root PicassoTableRow-bordered"
      >
        <td
          class="MuiTableCell-root PicassoTableCell-root MuiTableCell-body PicassoTableCell-body PicassoTableCell-narrow"
        >
          Cell
        </td>
      </tr>
    </tbody>
  </div>
</div>
`;
